feature: game data and statistics for bots #74